Include only payload parts in partSizes calculation

This will fix the bug that item size is changed
if an ItemModifyJob is executed with setIgnorePayload( true )
and an attribute to change.

BUG: 260791